--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Node.js Getting Started",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"]
+  "name": "Jerk du Jour",
+  "description": "Shame those jerks!",
+  "repository": "https://github.com/bshef/jerkdujour",
+  "logo": "https://jerkdujour.herokuapp.com/JerkDuJourIcon.svg",
+  "keywords": ["jerk", "du", "jour"]
 }
