--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "node-js-getting-started",
+  "name": "Jerk du Jour",
   "version": "0.1.2",
-  "description": "A sample Node.js app using Express 4",
+  "description": "Shame those jerks!",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x",
-    "cool-ascii-faces": "~1.3.x"
+    "express": "~4.9.x"
   },
   "engines": {
     "node": "0.10.x"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/bshef/jerkdujour"
   },
   "keywords": [
-    "node",
-    "heroku",
-    "express"
+    "jerk",
+    "du",
+    "jour"
   ],
-  "license": "MIT"
+  "license": "None"
 }
