Fixed invalid name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jerk du Jour",
+  "name": "JerkDuJour",
   "version": "0.1.2",
   "description": "Shame those jerks!",
   "main": "index.js",
