--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "~4.9.x",
-    "body-parser": "~1.0.1"
+    "body-parser": "~1.0.1",
+    "guid": "0.0.12"
   },
   "engines": {
     "node": "0.10.x"
