--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "JerkDuJour",
-  "version": "0.1.2",
-  "description": "Shame those jerks!",
-  "main": "index.js",
+  "name": "jerkdujour",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.9.x",
-    "body-parser": "~1.0.1",
-    "guid": "0.0.12"
-  },
-  "engines": {
-    "node": "0.10.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bshef/jerkdujour"
-  },
-  "keywords": [
-    "jerk",
-    "du",
-    "jour"
-  ],
-  "license": "None"
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.2",
+    "jade": "^1.9.2",
+    "guid": "0.0.12",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
+  }
 }
